# fremont-app-backend

./: .env  .gitignore  Pipfile  build_files.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
core/: admin.py  auth.py  models.py  notifications.py  permissions.py  schoology.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20240710_1047.py  0003_auto_20240710_1058.py  0004_auto_20240710_1124.py  0005_auto_20240710_1153.py  0006_auto_20240710_1238.py  0007_auto_20240710_1256.py  0008_alter_user_email.py  0009_auto_20240710_1509.py  0010_expopushtoken.py  0011_auto_20240711_1138.py  0012_auto_20240711_1528.py  0013_remove_organization_core_organization_type.py  0014_organization_core_organization_type.py  0015_auto_20240725_2129.py  0016_remove_membership_active.py
core/templates/: index.html
fremont_app/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
scripts/: clubs.csv  import.py
templates/admin/: login.html
templates/core/: index.html  redirect.html
